-changed "Mongolia" to "Mongolian People's Republic"
-changed "New Persian Empire" to "Iranian Empire" ("Persia" is the westernization of "Iran")
-changed "South Africa" to "Union of South Africa"
-changed "Luxemburg" to "Luxembourg"
-changed all US localisation to have "of America" ex. "United States of America" or "Communist States of America" instead of "Communist States" or "United States"

[h1]Changes to Victory Points[/h1]
-changed "Panama" victory point to "Panamá City" 
-changed "Luxemburg" victory point to "Luxembourg City"
-changed the "New York" victory point to "New York City"
-changed "Bogota" victory point to "Bogotá"
-changed “Beijing” victory point to “Beiping”
-changed "Guatemala" victory point to "Guatemala City" 
-changed "Nanjing" victory point to "Nanking"
-changed "Chongqing" victory point to "Chungking"

[h1]Changes to State Names[/h1]
-changed "Luxemburg" state name to "Luxembourg"
-changed "Southern Indochina" state name to "French Cochinchina" Southern Indochina is mainly incompassed by Cochinchina, with also parts of Annam. However in HOI4 the entire state of Annam is nonexistant with the northern portion being merged with Tonkin.
-changed "Nendo" to "Nendö"
-changed "Guangzhouwan" to "Kouang-Tchéou-Wan" (Kouang-Tchéou-Wan is the offical name)
-changed "Taiwan" to "Formosa" (In the Treaty of Shimonoseki, where Taiwan is ceeded to Japan, the island is stated as Formosa. Maps from the era also show it as Formosa.)
-changed "Comoro Islands" state to "Comoros Islands"
-changed "Trinidad" state to "Trinidad and Tobago"
-changed "Curacao" state to "Curaçao"
-changed "Reunion" state to "Réunion"
-changed “Rio Grande Sul” state to “Rio Grande do Sul”
-changed "Ostpreussen" state to "Ostpreußen"

[h1]Changes to Events[/h1]
-earlier changes nullified
-changed all instances of "Adolf Hitler" and "Hitler" in events_l_english.yml to "[GER.GetLeader]"
-changed event "Rally to Zog" to "Rally to [ALB.GetLeader]"