@@ -91,3 +91,29 @@
  LUX_democratic_ADJ:0 "Luxembourg"
  LUX_neutrality_ADJ:0 "Luxembourg"
  LUX_communism_ADJ:0 "Luxembourg"
+  #Soviet Union
+ SOV_fascism:0 "Russian Empire"
+ SOV_fascism_DEF:0 "The Russian Empire"
+ SOV_democratic:0 "Russian Federation"
+ SOV_democratic_DEF:0 "The Russian Federation"
+ SOV_neutrality:0 "Russia"
+ SOV_neutrality_DEF:0 "Russia"
+ SOV_communism:0 "U.S.S.R."
+ SOV_communism_DEF:0 "The U.S.S.R."
+ SOV_fascism_ADJ:0 "Russian"
+ SOV_democratic_ADJ:0 "Russian"
+ SOV_neutrality_ADJ:0 "Russian"
+ SOV_communism_ADJ:0 "Soviet"
+  #Germany
+ GER_fascism:0 "Nazi Germany"
+ GER_fascism_DEF:0 "Nazi Germany"
+ GER_democratic:0 "German Republic"
+ GER_democratic_DEF:0 "The German Republic"
+ GER_neutrality:0 "Germany"
+ GER_neutrality_DEF:0 "Germany"
+ GER_communism:0 "Socialist Republic of Germany"
+ GER_communism_DEF:0 "The Socialist Republic of Germany"
+ GER_fascism_ADJ:0 "German"
+ GER_democratic_ADJ:0 "German"
+ GER_neutrality_ADJ:0 "German"
+ GER_communism_ADJ:0 "German"
