@@ -10,7 +10,7 @@
 # GER_fascism_ADJ:0 "German"
 # GER_democratic_ADJ:0 "German"
 # GER_neutrality_ADJ:0 "German"
- GER_communism_ADJ:0 "German"
+# GER_communism_ADJ:0 "German"
  ENG_fascism:0 "British Empire"
  ENG_fascism_DEF:0 "The British Empire"
  ENG_democratic:0 "United Kingdom"
@@ -23,18 +23,18 @@
  ENG_democratic_ADJ:0 "British"
  ENG_neutrality_ADJ:0 "British"
  ENG_communism_ADJ:0 "British"
- SOV_fascism:0 "Russian Empire"
- SOV_fascism_DEF:0 "The Russian Empire"
- SOV_democratic:0 "Russian Federation"
- SOV_democratic_DEF:0 "The Russian Federation"
- SOV_neutrality:0 "Russia"
- SOV_neutrality_DEF:0 "Russia"
- SOV_communism:0 "Soviet Union"
- SOV_communism_DEF:0 "The Soviet Union"
- SOV_fascism_ADJ:0 "Russian"
- SOV_democratic_ADJ:0 "Russian"
- SOV_neutrality_ADJ:0 "Russian"
- SOV_communism_ADJ:0 "Soviet"
+# SOV_fascism:0 "Russian Empire"
+# SOV_fascism_DEF:0 "The Russian Empire"
+# SOV_democratic:0 "Russian Federation"
+# SOV_democratic_DEF:0 "The Russian Federation"
+# SOV_neutrality:0 "Russia"
+# SOV_neutrality_DEF:0 "Russia"
+# SOV_communism:0 "Soviet Union"
+# SOV_communism_DEF:0 "The Soviet Union"
+# SOV_fascism_ADJ:0 "Russian"
+# SOV_democratic_ADJ:0 "Russian"
+# SOV_neutrality_ADJ:0 "Russian"
+# SOV_communism_ADJ:0 "Soviet"
 # USA_fascism:0 "Free American Empire"
 # USA_fascism_DEF:0 "The Free American Empire"
 # USA_democratic:0 "United States"
